--- a/www/resources/templates/alarms.select.html
+++ b/www/resources/templates/alarms.select.html
@@ -35,6 +35,19 @@
                 </li>
                 <li >
                     <label class="label-checkbox item-content no-fastclick " >
+                        <input type="checkbox" name="checkbox-input" value="131072" {{#if Input}}checked="checked"{{/if}}>
+                        <div class="item-inner">
+                            <div class="item-title-row">
+                                <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG09}}</div>
+                                <div class="item-after">
+                                    <i class="icon icon-form-checkbox"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
+                </li>     
+                <li >
+                    <label class="label-checkbox item-content no-fastclick " >
                         <input type="checkbox" name="checkbox-geolock" value="1024" {{#if Geolock}}checked="checked"{{/if}}>
                         <div class="item-inner">
                             <div class="item-title-row">
@@ -61,6 +74,32 @@
                 </li>
                 <li >
                     <label class="label-checkbox item-content no-fastclick " >
+                        <input type="checkbox" name="checkbox-accOff" value="65536" {{#if AccOff}}checked="checked"{{/if}}>
+                        <div class="item-inner">
+                            <div class="item-title-row">
+                                <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG10}}</div>
+                                <div class="item-after">
+                                    <i class="icon icon-form-checkbox"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
+                </li>
+                <li >
+                    <label class="label-checkbox item-content no-fastclick " >
+                        <input type="checkbox" name="checkbox-accOn" value="32768" {{#if AccOn}}checked="checked"{{/if}}>
+                        <div class="item-inner">
+                            <div class="item-title-row">
+                                <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG04}}</div>
+                                <div class="item-after">
+                                    <i class="icon icon-form-checkbox"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
+                </li>
+                <li >
+                    <label class="label-checkbox item-content no-fastclick " >
                         <input type="checkbox" name="checkbox-impact" value="16384" {{#if Impact}}checked="checked"{{/if}}>
                         <div class="item-inner">
                             <div class="item-title-row">
@@ -72,19 +111,7 @@
                         </div>
                     </label>
                 </li>
-                <li >
-                    <label class="label-checkbox item-content no-fastclick " >
-                        <input type="checkbox" name="checkbox-input" value="131072" {{#if Input}}checked="checked"{{/if}}>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG09}}</div>
-                                <div class="item-after">
-                                    <i class="icon icon-form-checkbox"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </label>
-                </li>     
+                
                 <li >
                     <label class="label-checkbox item-content no-fastclick " >
                         <input type="checkbox"  name="checkbox-power" value="4" {{#if Power}}checked="checked"{{/if}}>
