--- a/www/resources/templates/asset.alarm.html
+++ b/www/resources/templates/asset.alarm.html
@@ -28,6 +28,19 @@
 	            	</div>	            	
 	            </li>
 	            <li >
+                    <label class="label-checkbox item-content no-fastclick " >
+                        <input type="checkbox" name="checkbox-input" value="131072" {{#if Input}}checked="checked"{{/if}}>
+                        <div class="item-inner">
+                            <div class="item-title-row">
+                                <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG09}}</div>
+                                <div class="item-after">
+                                    <i class="icon icon-form-checkbox"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
+                </li>  
+	            <li >
 	            	<label class="label-checkbox item-content no-fastclick " >
 	            		<input type="checkbox" name="checkbox-geolock" value="1024" {{#if Geolock}}checked="checked"{{/if}}>
 	            		<div class="item-inner">
@@ -54,6 +67,32 @@
 	            	</label>
 	            </li>
 	            <li >
+                    <label class="label-checkbox item-content no-fastclick " >
+                        <input type="checkbox" name="checkbox-accOff" value="65536" {{#if AccOff}}checked="checked"{{/if}}>
+                        <div class="item-inner">
+                            <div class="item-title-row">
+                                <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG10}}</div>
+                                <div class="item-after">
+                                    <i class="icon icon-form-checkbox"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
+                </li>
+                <li >
+                    <label class="label-checkbox item-content no-fastclick " >
+                        <input type="checkbox" name="checkbox-accOn" value="32768" {{#if AccOn}}checked="checked"{{/if}}>
+                        <div class="item-inner">
+                            <div class="item-title-row">
+                                <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG04}}</div>
+                                <div class="item-after">
+                                    <i class="icon icon-form-checkbox"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </label>
+                </li>
+	            <li >
 	            	<label class="label-checkbox item-content no-fastclick " >
 	            		<input type="checkbox" name="checkbox-impact" value="16384" {{#if Impact}}checked="checked"{{/if}}>
 	            		<div class="item-inner">
@@ -66,19 +105,7 @@
 	            	  	</div>
 	            	</label>
 	            </li>
-	            <li >
-                    <label class="label-checkbox item-content no-fastclick " >
-                        <input type="checkbox" name="checkbox-input" value="131072" {{#if Input}}checked="checked"{{/if}}>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG09}}</div>
-                                <div class="item-after">
-                                    <i class="icon icon-form-checkbox"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </label>
-                </li>     
+	               
 	            <li >
 	            	<label class="label-checkbox item-content no-fastclick " >
 	            		<input type="checkbox"  name="checkbox-power" value="4" {{#if Power}}checked="checked"{{/if}}>
