--- a/www/resources/templates/alarms.select.html
+++ b/www/resources/templates/alarms.select.html
@@ -13,8 +13,8 @@
     	</div>    
   	</div>
 
-  	<div class="page-content">  		
-  		
+  	<div class="page-content">
+        <div class="content-block-title color-red showAlarmNotice" >{{@global.LANGUAGE.PROMPT_MSG056}}</div>
         <input type="hidden" name="Assets" value="{{Assets}}">
         <div class="list-block no-hairlines-between no-hairlines media-list alarm_list"> 
                 
@@ -23,7 +23,7 @@
                 <li class="item-content alarm_title">                                   
                     <div class="item-inner">
                         <div class="item-title-row">
-                            <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG01}}</div>
+                            <div class="item-title color-white">{{@global.LANGUAGE.ALARM_MSG18}}</div>
                             <div class="item-after">
                                 <label class="label-switch no-fastclick ">
                                     <input type="checkbox" name="checkbox-alarm" {{#if Alarm}}checked="checked"{{/if}}>
