--- a/www/resources/templates/recharge.html
+++ b/www/resources/templates/recharge.html
@@ -5,15 +5,15 @@
       	<a href="#" class="back link"> <i class="icon icon-back color-black"></i></a>
       </div>
       <div class="left navbar_title navbar_title_long">{{@global.LANGUAGE.RECHARGE_MSG00}}</div>
-
+            
     </div>
   </div>
     <div class="page-content">
       <div class="content-block-title color-white">{{@global.LANGUAGE.RECHARGE_MSG01}}</div>
     	<!-- <div class="list-block media-list recharge_list">
-              <ul>
+              <ul>            
                 <li>
-                  <label class="label-checkbox item-content">
+                  <label class="label-checkbox item-content">              
                     <input type="checkbox" name="my-checkbox" value="Books" checked="checked">
                     <div class="item-media">
                         <i class="icon icon-form-checkbox"></i>
@@ -29,19 +29,19 @@
                               <option value="10">10 credits</option>
                             </select>
                           </div>
-
+                                            
                         </div>
                       </div>
-
+                                        
                     </div>
                   </label>
-                </li>
-
+                </li>           
+                  
               </ul>
             </div>  -->
-
-
-
+      
+                      
+      
        <div class="content-block recharge_block_wrapper">
         <div class="row">
           <div class="col-35 recharge_block">
@@ -49,12 +49,13 @@
               <p><span>10</span> {{@global.LANGUAGE.RECHARGE_MSG02}}</p>
             </div>
             <div class="recharge_block_middle">
-              <p><b>$3.00</b> {{buttonCur}}</p>
+              <p><b>$3.00</b> <!-- {{buttonCur}} --></p>
             </div>
-            <div class="recharge_block_bottom">
-              <!-- <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KPF23R37HEJAC&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a> -->
+            <div class="recharge_block_bottom">              
+              
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id={{button10}}&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a>
-            </div>
+              <!-- <a href="https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id={{button10}}&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a> -->
+            </div>            
           </div>
           <div class="col-30"></div>
           <div class="col-35 recharge_block recharge_block2">
@@ -62,11 +63,12 @@
               <p><span>50</span> {{@global.LANGUAGE.RECHARGE_MSG02}}</p>
             </div>
             <div class="recharge_block_middle">
-              <p><b>$10.00</b> {{buttonCur}}</p>
+              <p><b>$10.00</b> <!-- {{buttonCur}} --></p>
             </div>
-            <div class="recharge_block_bottom">
-              <!-- <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=QYHM382HALQBG&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a> -->
+            <div class="recharge_block_bottom">             
+              
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id={{button50}}&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a>
+              <!-- <a href="https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id={{button50}}&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a> -->
             </div>
           </div>
           <div class="col-40 recharge_block recharge_block3">
@@ -74,11 +76,12 @@
               <p><span>100</span> {{@global.LANGUAGE.RECHARGE_MSG02}}</p>
             </div>
             <div class="recharge_block_middle">
-              <p><b>$18.00</b> {{buttonCur}}</p>
+              <p><b>$18.00</b><!--  {{buttonCur}} --></p>
             </div>
-            <div class="recharge_block_bottom">
-              <!-- <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7GB5ZBQQU5RAY&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a> -->
+            <div class="recharge_block_bottom">              
+              
               <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id={{button100}}&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a>
+              <!-- <a href="https://www.sandbox.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id={{button100}}&on0=KEY&os0={{userCode}}&on1=dn&os1={{dealerNumber}}&on2=other&os2={{other}}" class="link external button_buy_now">{{@global.LANGUAGE.RECHARGE_MSG03}}</a> -->
             </div>
           </div>
         </div>
@@ -87,6 +90,7 @@
 
       <div class="content-block">
         <p class="color-white">{{@global.LANGUAGE.PROMPT_MSG010}}</p>
+        <!-- <p class="color-white">{{@global.LANGUAGE.PROMPT_MSG017}}</p> -->
       </div>
-    </div>
+    </div>	
 </div>
