--- a/www/resources/templates/asset.position.html
+++ b/www/resources/templates/asset.position.html
@@ -12,7 +12,7 @@
     	<div class="position_map"> 
             <div class="map" id="map"></div>
             <div class="float_button_wrapper pano_button_wrapper bg-blue">
-                <a href="#" class="link color-white pano_button" data-lat="{{Lat}}" data-lng="{{Lng}}">
+                <a href="#" class="link pano_button" data-lat="{{Lat}}" data-lng="{{Lng}}">
                     <i class="pano_preview_img"></i>                                   
                 </a>
             </div>
